crates/reap-polymarket-adapter/tests/ui/fake_commands_are_move_only.stderr
error[E0277]: the trait bound `PmFakePlaceCommand: Clone` is not satisfied
 --> tests/ui/fake_commands_are_move_only.rs:6:21
  |
6 |     require_clone::<PmFakePlaceCommand>();
  |                     ^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `PmFakePlaceCommand`
  |
note: required by a bound in `require_clone`
 --> tests/ui/fake_commands_are_move_only.rs:3:21
  |
3 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`

error[E0277]: the trait bound `PmFakeCancelCommand: Clone` is not satisfied
 --> tests/ui/fake_commands_are_move_only.rs:7:21
  |
7 |     require_clone::<PmFakeCancelCommand>();
  |                     ^^^^^^^^^^^^^^^^^^^ the trait `Clone` is not implemented for `PmFakeCancelCommand`
  |
note: required by a bound in `require_clone`
 --> tests/ui/fake_commands_are_move_only.rs:3:21
  |
3 | fn require_clone<T: Clone>() {}
  |                     ^^^^^ required by this bound in `require_clone`
