crates/reap-polymarket-adapter/tests/ui/fake_commands_are_move_only.rs
use reap_polymarket_adapter::{PmFakeCancelCommand, PmFakePlaceCommand};

fn require_clone<T: Clone>() {}

fn main() {
    require_clone::<PmFakePlaceCommand>();
    require_clone::<PmFakeCancelCommand>();
}
